gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16228.d
version https://git-lfs.github.com/spec/v1
oid sha256:a9d29896ee5cafb30adffd4091ae42bb5cf38639fa72092834cbe56ea511dc55
size 548
